--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
+    "ect": "^0.5.9",
     "express": "^4.13.1",
     "gulp": "^3.9.0",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
-    "reflux": "^0.2.9"
+    "reflux": "^0.2.9",
+    "typescript": "^1.5.0-beta"
   }
 }
