--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
+    "del": "^1.2.0",
     "ect": "^0.5.9",
     "express": "^4.13.1",
+    "globule": "^0.2.0",
     "gulp": "^3.9.0",
+    "gulp-typescript": "^2.7.8",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
     "reflux": "^0.2.9",
-    "typescript": "^1.5.0-beta"
+    "typescript": "^1.5.0-beta",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
