--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
+    "config": "^1.14.0",
     "del": "^1.2.0",
     "ect": "^0.5.9",
     "express": "^4.13.1",
     "globule": "^0.2.0",
     "gulp": "^3.9.0",
     "gulp-typescript": "^2.7.8",
+    "js-yaml": "^3.3.1",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
     "reflux": "^0.2.9",
