--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
+    "byline": "^4.2.1",
     "config": "^1.14.0",
     "del": "^1.2.0",
     "ect": "^0.5.9",
