--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
     "byline": "^4.2.1",
+    "classnames": "^2.1.3",
     "config": "^1.14.0",
     "del": "^1.2.0",
     "ect": "^0.5.9",
