--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Human interface for the IS FL Othello Protocol.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp default",
+    "clean": "gulp clean",
+    "start": "node index.js"
   },
   "author": "uhyo",
   "license": "MIT",
