--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express-ws": "^0.2.6",
     "globule": "^0.2.0",
     "gulp": "^3.9.0",
-    "gulp-ruby-sass": "^1.0.5",
+    "gulp-sass": "^2.0.3",
     "gulp-typescript": "^2.7.8",
     "js-yaml": "^3.3.1",
     "react": "^0.13.3",
