--- a/package.json
+++ b/package.json
@@ -12,25 +12,29 @@
   "author": "uhyo",
   "license": "MIT",
   "dependencies": {
-    "babelify": "^6.1.3",
+    "babelify": "^6.4.0",
     "browserify": "^10.2.6",
-    "byline": "^4.2.1",
+    "byline": "^4.2.2",
     "classnames": "^2.1.3",
     "config": "^1.14.0",
-    "del": "^1.2.0",
+    "del": "^1.2.1",
     "ect": "^0.5.9",
     "express": "^4.13.1",
     "express-ws": "^0.2.6",
     "globule": "^0.2.0",
     "gulp": "^3.9.0",
-    "gulp-sass": "^2.0.3",
-    "gulp-typescript": "^2.7.8",
+    "gulp-sass": "^2.3.2",
+    "gulp-typescript": "^3.2.1",
     "js-yaml": "^3.3.1",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
-    "reflux": "^0.2.9",
-    "st": "^0.5.4",
-    "typescript": "^1.5.0-beta",
+    "reflux": "^0.2.13",
+    "st": "^0.5.5",
+    "typescript": "^2.4.2",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.0.36",
+    "@types/node": "^8.0.14"
   }
 }
