--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
   "author": "uhyo",
   "license": "MIT",
   "dependencies": {
-    "babelify": "^6.4.0",
-    "browserify": "^10.2.6",
     "byline": "^4.2.2",
     "classnames": "^2.1.3",
     "config": "^1.14.0",
     "del": "^1.2.1",
     "ect": "^0.5.9",
-    "express": "^4.13.1",
-    "express-ws": "^0.2.6",
-    "globule": "^0.2.0",
+    "express": "^4.16.3",
+    "express-ws": "^4.0.0",
     "gulp": "^3.9.0",
-    "gulp-sass": "^2.3.2",
     "gulp-typescript": "^3.2.1",
     "js-yaml": "^3.3.1",
     "react": "^0.13.3",
-    "reactify": "^1.1.1",
     "reflux": "^0.2.13",
-    "st": "^0.5.5",
+    "st": "^1.2.2",
     "typescript": "^2.4.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@types/express": "^4.0.36",
-    "@types/node": "^8.0.14"
+    "@types/node": "^8.0.14",
+    "babelify": "^9.0.0",
+    "browserify": "^16.2.2",
+    "gulp-sass": "^4.0.1"
   }
 }
